create frontend image and k8s config